cluster/apps/default/openccu/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homematic
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  tls:
    - secretName: homematic-tls
      hosts:
        - homematic.bergmann.click
  rules:
  - host: homematic.bergmann.click
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: raspberrymatic
              port:
                number: 80
